# llm-defender-subnet-archive

./: .dockerignore  .env.sample  .gitignore  LICENSE  README.md  api.Dockerfile  docker-compose.yml  min_compute.yml  pyproject.toml  validator.Dockerfile
.github/workflows/: subnet-containers-latest.yml  subnet-containers-tagged.yml
llm_defender/base/: __init__.py  config.py  engine.py  healthcheck.py  neuron.py  protocol.py  utils.py  wandb_handler.py
llm_defender/core/miner/: __init__.py  miner.py
llm_defender/core/miner/prompt_injection/: __init__.py  analyzer.py  text_classification.py
llm_defender/core/miner/sensitive_information/: __init__.py  analyzer.py  token_classification.py
llm_defender/core/validator/: __init__.py  prompt_generator.py  validator.py
llm_defender/core/validator/data_types/: __init__.py
llm_defender/core/validator/generator_data/: __init__.py  adjectives.py  commands.py  instructions.py  secret_words.py  subjects.py  topics.py  verbs.py
llm_defender/core/validator/prompt_injection/: __init__.py  process.py
llm_defender/neurons/: miner.py  validator.py
llm_defender/subnet_api/: handler.py  main.py
scripts/: auto_updater.py  prep.py  run_neuron.sh
scripts/fine_tuning_helpers/: text_classification_prompt_injection_helper.py  token_classification_sensitive_information_helper.py
scripts/helpers/: generate_prompts.py  pickle_debugger.py  query_miner.py  query_notebook.ipynb
tests/base/: test_engine.py  test_neuron.py  test_protocol.py  test_utils.py  test_wandadb_handler.py
tests/core/miners/: test_miner.py  test_supported_analyzers.py
tests/core/validators/: test_validator.py
(+21 files in other folders)
